--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@
 # limitations under the License.
 #
 
-org.gradle.jvmargs=-Xmx800m -XX:MaxPermSize=256m
+org.gradle.jvmargs=-Xmx800m
 cxnMavenRepositoryUrl=https://hub.chemaxon.com/artifactory/libs-release
